JDK 17 errorprone update
Also, fix some reported problems:
- missing overrides
- not used private classes removed
- non-static inner classes converted to be static
- avoid recursion and stack overflow in bolt handler